platforms/drm: support NVidia as secondary GPU with CPU copy

BUG: 431062
(cherry picked from commit cfd7af01795af365cbaa6aea11a3b2009bbbd3c8)