src/plugins/platforms/drm/egl_multi_backend.h
@@ -36,8 +36,6 @@ public:
 
     void screenGeometryChanged(const QSize &size) override;
 
-    void addBackend(AbstractEglDrmBackend *backend);
-
     bool directScanoutAllowed(int screen) const override;
 
 public Q_SLOTS:
@@ -47,6 +45,7 @@ public Q_SLOTS:
 private:
     DrmBackend *m_platform;
     QVector<AbstractEglDrmBackend*> m_backends;
+    bool m_initialized = false;
 
     AbstractEglDrmBackend *findBackend(int screenId, int& internalScreenId) const;
 
